--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,12 +3,12 @@
 <%= link_to "create new portfolio", new_portfolio_path%>
 
 <% @portfolio_items.each do |portfolio_item| %>
-	<p> <%= portfolio_item.title %> </p>
-	<p> <%= portfolio_item.subtitle %> </p>
-	<p> <%= portfolio_item.body %> </p>
-	<p> <%= portfolio_item.thumb_image %> </p>
-	<%= image_tag portfolio_item.thumb_image if portfolio_item.thumb_image.present? %> 
-	<%= link_to "Edit", edit_portfolio_path(portfolio_item.id)%>
-	<!-- A second way to generate the edit through the html form -->
-	<a href="/portfolios/<%= portfolio_item.id %>/edit">Edit2</a>
+<!-- passing argument without id, rails know to pickup the current portfolio id -->
+<p> <%= link_to portfolio_item.title, portfolio_path(portfolio_item) %> </p>
+<p> <%= portfolio_item.subtitle %> </p>
+<p> <%= portfolio_item.body %> </p>
+<%= image_tag portfolio_item.thumb_image if portfolio_item.thumb_image.present? %> 
+<%= link_to "Edit", edit_portfolio_path(portfolio_item.id)%>
+<!-- A second way to generate the edit through the html form -->
+<a href="/portfolios/<%= portfolio_item.id %>/edit">Edit2</a>
 <% end %>
