--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -11,4 +11,5 @@
 <%= link_to "Edit", edit_portfolio_path(portfolio_item.id)%>
 <!-- A second way to generate the edit through the html form -->
 <a href="/portfolios/<%= portfolio_item.id %>/edit">Edit2</a>
+<td><%= link_to 'Delete portfolio_item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %></td>
 <% end %>
