--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -15,7 +15,14 @@
     <%= f.label :body %>
     <%= f.text_area :body %>
   </div>
-
+  <ul>
+    <li>
+    <%= f.fields_for :technologies do |technology_form|%>
+      <%= technology_form.label :name %>
+      <%= technology_form.text_field :name %>
+    <%end%>
+    </li>
+  </ul>
   <div class="actions">
     <%= f.submit %>
   </div>
