--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -4,3 +4,8 @@
 <em> <%= @portfolio_item.subtitle %> </em>
 <p> <%= @portfolio_item.body %> </p>
 <p> <%= @portfolio_item.thumb_image %> </p>
+
+<h2>Technologies Used</h2>
+<%= @portfolio_item.technologies.each do |t|%>
+<p><%= t.name%></p>
+<%end%>
