--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
     <% else %>
       <%= link_to('Login', new_user_session_path) %>
+      <%= link_to('register', new_user_registration_path) %>
     <% end %>
     <%= yield %>
   </body>
